# protomech

./: .gitignore  README.md  lefthook.yml  pyproject.toml
.github/workflows/: lint.yml  test-autochem.yaml  test-automech.yaml  test-automol.yaml  test-protomech.yaml  test.yaml
examples/create/: create.ipynb  species.csv
examples/json/: visualize.ipynb
examples/pes/: mess.inp  visualize.ipynb
examples/pes-from-scratch/: build.ipynb  mech.json  mess.inp  visualize.ipynb
examples/rename/: orig_chem.inp  orig_chem_all.inp  orig_species.txt  rename.ipynb  species.csv  updated_species.csv
examples/rmg/: reactions.inp  visualize.ipynb
examples/species-stereo/: cyclopentene_chem.inp  cyclopentene_species_dictionary.txt  expand.ipynb
src/_RMMD/: .gitrepo  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  test.ipynb
src/_RMMD/.github/workflows/: lint.yaml  test.yaml
src/_RMMD/examples/: butane_thermo.yaml  directreference.yaml  geometry.yaml  minimal.yaml
src/_RMMD/src/rmmd/: cli.py  elements.py  keys.py  kinetics.py  metadata.py  pes.py  rmess.py  schema.py  species.py  test.py  thermo.py
src/_RMMD/tests/: test_examples.py  test_rmmd.py
src/_RMMD/tests/rmmd/: test_metadata_direct_reference.yaml  test_pes_geometry.yaml
src/_autochem/: .gitrepo
src/_autochem/autochem/: __init__.py
src/_autochem/autochem/pes/: __init__.py  _pes.py
src/_autochem/autochem/rate/: _reaction.py  data.py
src/_autochem/autochem/tests/: test__pes.py
src/_autochem/autochem/therm/: data.py
src/_autochem/autochem/util/: __init__.py  mess.py  mess_i.py  mess_o.py
src/_autochem/automol/: combine.py
src/_autochem/automol/graph/base/: enum.py
src/automech/: __init__.py  _mech.py  net.py  reaction.py  species.py
src/automech/io/: __init__.py  _io.py
src/automech/io/cantera/: __init__.py  read.py  write.py
src/automech/io/chemkin/: __init__.py  read.py  update.py  write.py
src/automech/io/data/: __init__.py  encoder.py
src/automech/io/mechanalyzer/: __init__.py  read.py  write.py
src/automech/io/rmg/: __init__.py  read.py
src/automech/test/: __init__.py  test.ipynb  test_io.py  test_mech.py
src/automech/test/data/: cyclopentene_species.txt  webb_sample_species.txt
src/automech/util/: __init__.py  c_.py  df_.py  encoder.py  io_.py  pandera_.py
src/project_utilities/: __about__.py  __init__.py  _util.py  cli.py  fig.py  p_.py  reactors.py  util.py  workflow.py
src/protomech/mess/: __init__.py  inp.py  io.py  net.py  out.py  pes.py  surf.py
src/protomech/tests/: test.ipynb  test__mess.py
src/protomech/tests/data/: acrolein-formation.inp  cyclopentene-ho2-addition.inp  cyclopentene-prompt-instability.inp  cyclopentene-unimol-instability.inp  cyclopentene_mech.json  cyclopentenyl-o2.json
src/protomech/util/: __init__.py  array.py  digraph.py  sequence.py
