[project]
authors = [{name = "Andreas Copan", email = "avcopan@gmail.com"}]
name = "protomech"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["pyvis"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
test = ["pytest", "pytest-xdist[psutil]"]
lint = ["ruff", "lefthook", "uv"]
docs = ["sphinx", "myst-parser", "sphinx-book-theme", "sphinx-autodoc-typehints"]

[tool.pixi.workspace]
channels = ["conda-forge", "auto-mech"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
protomech = { path = ".", editable = true }
autochem = { path = "src/_autochem", editable = true }
RMMD = { path = "src/_RMMD", editable = true }

[tool.pixi.feature.lint.tasks]
lint-autochem = { cmd = "./lint.sh", cwd = "src/_autochem" }
lint = { cmd = "lefthook run pre-commit --all-files", depends-on = ["lint-autochem"] }

[tool.pixi.dependencies]
# SPEC0 dependencies
python = "3.12.*"
numpy = "2.0.*"
scipy = "1.14.*"
networkx = "3.4.*"
# Other dependencies
altair-all = "*"
more-itertools = "*"
pandera = "*"
pint = "*"
polars = "*"
pyarrow = "*"
py3dmol = "*"
pyparsing = "*"
pydantic = "*"
tqdm = "*"

[tool.pixi.feature.sim.dependencies]
cantera = "*"
jupyter = "*"
mess-static = "*"

[tool.pixi.environments]
test = ["test"]
all = ["test", "lint", "docs", "sim"]

# Ruff configurations
[tool.ruff]
target-version = "py311"
output-format = "concise"
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # missing trailing comma (handled by format)
    "RUF022",   # `__all__` is not sorted
    "TID252",   # relative import
    # resolve rule conflicts:
    "D203",     # incorrect blank line before class (uses D211 instead)
    "D213",     # multi-line summary second line (uses D212 instead)
]
exclude = ["src/_*"]
