[project]
authors = [{name = "Andreas Copan", email = "avcopan@gmail.com"}]
name = "protomech"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["pyvis"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
test = ["pytest", "pytest-xdist[psutil]"]
lint = ["ruff", "lefthook", "uv"]
docs = ["sphinx", "myst-parser", "sphinx-book-theme", "sphinx-autodoc-typehints"]

[tool.pixi.workspace]
channels = ["conda-forge", "auto-mech"]
platforms = ["linux-64"]
preview = ["pixi-build"]

[tool.pixi.feature.lint.tasks]
lint = { cmd = "lefthook run pre-commit --all-files" }

[tool.pixi.dependencies]
protomech = { path = "." }
autochem = "==2025.10.0"
# SPEC0 dependencies
numpy = ">=2.0"
scipy = ">=1.14"
networkx = ">=3.4"
# Other dependencies
altair-all = ">=5.5.0"
more-itertools = ">=10.8.0"
pandera = ">=0.26.1"
pint = ">=0.25"
polars = ">=1.34.0"
pyarrow = ">=21.0.0"
py3dmol = ">=2.5.3"
pyparsing = ">=3.2.5"
pydantic = ">=2.12.0"
tqdm = ">=4.67.1"

[tool.pixi.feature.sim.dependencies]
cantera = "*"
jupyter = "*"
mess-static = "*"
matplotlib = ">=3.10.6"

[tool.pixi.environments]
test = ["test"]
dev = ["dev"]
all = ["test", "lint", "docs", "sim"]

[tool.pixi.package] 
name = "protomech"
version = "0.1.0"

[tool.pixi.package.build] 
backend = { name = "pixi-build-python", version = "==0.3.2" }

[tool.pixi.package.host-dependencies] 
hatchling = "==1.26.3"

[tool.pixi.package.run-dependencies] 
autochem = "==2025.10.0"
# SPEC0 dependencies
numpy = ">=2.0"
scipy = ">=1.14"
networkx = ">=3.4"
# Other dependencies
altair-all = ">=5.5.0"
more-itertools = ">=10.8.0"
pandera = ">=0.26.1"
pint = ">=0.25"
polars = ">=1.34.0"
pyarrow = ">=21.0.0"
py3dmol = ">=2.5.3"
pyparsing = ">=3.2.5"
pydantic = ">=2.12.0"
tqdm = ">=4.67.1"

[tool.pixi.feature.dev.dependencies]
autochem = { path = "../autochem" }

# Ruff configurations
[tool.ruff]
target-version = "py311"
output-format = "concise"
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # missing trailing comma (handled by format)
    "RUF022",   # `__all__` is not sorted
    "TID252",   # relative import
    # resolve rule conflicts:
    "D203",     # incorrect blank line before class (uses D211 instead)
    "D213",     # multi-line summary second line (uses D212 instead)
]
