[project]
name = "protomech"
version = "0.1.0"
requires-python = ">= 3.12"
dependencies = ["pyvis"]

[dependency-groups]
test = ["pytest", "pytest-xdist[psutil]"]
lint = ["ruff", "lefthook"]
docs = ["sphinx", "myst-parser", "sphinx-book-theme", "sphinx-autodoc-typehints"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

# Hatchling configurations
[tool.hatch.build.targets.wheel]
packages = ["src/automech", "src/protomech", "src/project_utilities"]

# Pixi configurations
[tool.pixi.workspace]
channels = ["conda-forge", "auto-mech"]
platforms = ["win-64", "linux-64", "osx-arm64", "osx-64"]
preview = ["pixi-build"]

#   - Build
[tool.pixi.package]
name = "protomech"
version = "0.1.0"

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "*" }

[tool.pixi.package.host-dependencies]
hatchling = "==1.26.3"

[tool.pixi.package.run-dependencies]
autochem = "==2025.10.1"
# SPEC0 dependencies
numpy = ">=2.0"
scipy = ">=1.14"
networkx = ">=3.4"
# Other dependencies
altair-all = ">=5.5.0"
more-itertools = ">=10.8.0"
pandera = ">=0.26.1"
pint = ">=0.25"
polars = ">=1.34.0"
pyarrow = ">=21.0.0"
py3dmol = ">=2.5.3"
pyparsing = ">=3.2.5"
pydantic = ">=2.12.0"
tqdm = ">=4.67.1"

#   - Environments
[tool.pixi.dependencies]
protomech = { path = "." }
autochem = "==2025.10.1"
# SPEC0 dependencies
numpy = ">=2.0"
scipy = ">=1.14"
networkx = ">=3.4"
# Other dependencies
altair-all = ">=5.5.0"
more-itertools = ">=10.8.0"
pandera = ">=0.26.1"
pint = ">=0.25"
polars = ">=1.34.0"
pyarrow = ">=21.0.0"
py3dmol = ">=2.5.3"
pyparsing = ">=3.2.5"
pydantic = ">=2.12.0"
tqdm = ">=4.67.1"

[tool.pixi.feature.dev.dependencies]
autochem = { path = "../autochem" }

[tool.pixi.feature.sim.dependencies]
cantera = "*"
jupyter = "*"
mess-static = "*"
matplotlib = ">=3.10.6"

[tool.pixi.environments]
test = ["test"]
dev = ["dev", "test", "lint", "docs", "sim"]
all = ["test", "lint", "docs", "sim"]

#   - Tasks
[tool.pixi.feature.lint.tasks]
lint = { cmd = "lefthook run pre-commit --all-files" }

# Ruff configurations
[tool.ruff]
target-version = "py311"
output-format = "concise"
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # missing trailing comma (handled by format)
    "RUF022",   # `__all__` is not sorted
    "TID252",   # relative import
    # resolve rule conflicts:
    "D203",     # incorrect blank line before class (uses D211 instead)
    "D213",     # multi-line summary second line (uses D212 instead)
]
