[project]
authors = [{name = "Andreas Copan", email = "avcopan@gmail.com"}]
dependencies = [
    "pydantic>=2.10.0,<3",
    "pyyaml>=5.4.1,<7",
    "pytest>=8.0,<9",
    "click>=8.1.8,<9",
]
description = "Add a short description here"
name = "rmmd"
requires-python = ">= 3.11"
version = "0.1.0b"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.scripts]
rmmd = "rmmd.cli:rmmd"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
rmmd = { path = ".", editable = true }

[tool.pixi.tasks]
lint = "pre-commit run --all-files"

[dependency-groups]
dev = ["ipykernel", "ruff>=0.12.1,<0.13", "pre-commit>=4.2.0,<5"]

[tool.pixi.environments]
dev = ["dev"]
